proj1/tests/correct/statictypereturn.py
def A()::str:
    return 'str'
print A()

