proj1/tests/error/return.py
def A():
    return .
print 'str'

